# maimai_plugin

./: README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
maimaiUID/b50/: __init__.py
maimai_plugin/: __full__.py
maimai_plugin/maimai_plugin_b50/: __init__.py  public.py
maimai_plugin/maimai_plugin_b50/libraries/: image.py  maimai_best_40.py  maimai_best_50.py  maimaidx_music.py  tool.py
nonebot_plugin_maimai/: __init__.py  api.py  public.py
nonebot_plugin_maimai/libraries/: image.py  maimai_best_40.py  maimai_best_50.py  maimaidx_music.py  tool.py
